# RarEase

./: .gitignore  README.md  RarEase_Tauri_Rust_Product_Technical_Plan.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-macos.yml  build-windows.yml  release.yml
prototypes/: rarease_prototype.html
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/services/: tauriApi.ts
src/stores/: archiveStore.ts
src/types/: archive.ts
