[package]
name = "rarease"
version = "0.1.0"
description = "A lightweight RAR extractor for Windows and macOS"
authors = ["RarEase"]
edition = "2021"

[lib]
name = "rarease_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
thiserror = "1"
